<resources>
    <string name="app_name">My Yearbook</string>

    <string name="scwa_logo">SCWA LOGO</string>

    <string name="next_button">Next Screen</string>
    <string name="return_button">Return Home</string>
    <string name="return_home_button">Return home</string>
    <string name="share_button">Share Image</string>
    <string name="button_click_text">Alexander Behrhof\n\nMy Cool App</string>

    <string name="alex_button">Alex\'s Yearbook</string>
    <string name="alex_graduation_plan">The steps I am taking to prepare for a job after graduation:
        \n\n
        1. Taking any programming classes that I can take for experience.
        \n\n
        2. Taking an Internship to gain more work experience
        \n\n
        3. Expanding my knowledge by creating just for fun examples using code.
        \n\n
        4. Opening up what I am willing to code and what languages.
    </string>
    <string name="alex_bottom_text">Alexander Behrhof\n\nI Intern at SCWA</string>

    <string name="davia_button">Davia\'s Yearbook</string>
    <string name="davia_graduation_plan">my graduation plan is to obtain an internship, then a full time
        \n as a cyber security specialist.
    </string>
    <string name="davia_bottom_text">Davia Balford was born with extra fingers.</string>

    <string name="robel_button">Robel\'s Yearbook</string>
    <string name="robel_graduation_plan">I plan on working at a statup to gain experience and build up my resume after graduation</string>
    <string name="robel_bottom_text">Robel Gebremichael</string>

    <string name="channel_name">MY_YEARBOOK</string>
    <string name="channel_description">My Yearbook Notifications</string>

    <string name="notification_title">My Yearbook Notification</string>
    <string name="notification_text">Return to my yearbook app!</string>
</resources>
