<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard" android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp" tools:srcCompat="@drawable/sjcny_logo" android:id="@+id/imageView"
        android:layout_weight="1" app:srcCompat="@drawable/sjcny_logo" android:contentDescription="@string/scwa_logo"
        android:padding="5sp"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp" android:layout_weight="1" android:gravity="bottom|center">
        <Button
            android:text="@string/alex_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/alexBtn" android:onClick="onClickAlexBtn"
            android:translationY="-250px"/>
        <Button
            android:text="@string/davia_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/daviaBtn" android:onClick="onClickDaviaBtn"
            android:translationY="-250px"/>
        <Button
            android:text="@string/robel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/robelButton" android:onClick="onClickRobelBtn"
            android:translationY="-250px"/>
    </LinearLayout>

</LinearLayout>

