<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.davia.GraduationPlanActivity" android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="446dp"
        android:gravity="start|center_horizontal|top|center_vertical"
        android:ems="10"
        android:id="@+id/multiLine" android:text="@string/robel_graduation_plan" android:textSize="24sp"
        android:textAlignment="center" android:textIsSelectable="false" android:editable="false"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:layout_weight="1" android:gravity="bottom|center">
        <Button
            android:text="@string/return_button"
            android:layout_width="126dp"
            android:layout_height="wrap_content" android:id="@+id/returnHomeButton"
            android:onClick="onClickHomeBtn"
            android:translationY="-250px"/>
        <TextView
            android:layout_width="317dp"
            android:layout_height="150dp"
            android:background="#15C11C"
            android:text="@string/robel_bottom_text"
            android:textColor="#050505"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_gravity="center" android:id="@+id/steps_test"/>
    </LinearLayout>

</LinearLayout>

